2.7. мапы Ex